crates/macros/tests/ui/validator_contains_non_string_fail.rs
use nebula_macros::Validator;

#[derive(Validator)]
struct InvalidContainsType {
    #[validate(contains = "foo")]
    count: u32,
}

fn main() {}